--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "cmake.cmakePath": "/opt/homebrew/bin/cmake",
     "files.associations": {
         "type_traits": "cpp",
         "array": "cpp",
