--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,7 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "qcoreapplication": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
 }
