Add the Linux configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ set_property(
         CXX_STANDARD 17)
 
 # Qt specific stuff
-set(CMAKE_PREFIX_PATH "/Users/jan/Qt/6.5.0/macos/lib/cmake/Qt6")
+#set(CMAKE_PREFIX_PATH "/Users/jan/Qt/6.5.0/macos/lib/cmake/Qt6")
+set(CMAKE_PREFIX_PATH "/home/jan/Qt/6.5.0/gcc_64")
 find_package(Qt6 REQUIRED COMPONENTS Core)
 qt_standard_project_setup()
 target_link_libraries(FileBrowser PRIVATE Qt6::Core)
