--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,10 @@ find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Gui)
 qt_add_executable(fileBrowser ./src/program.cpp)
 target_include_directories(fileBrowser 
     PRIVATE
-        "~/Qt/6.5.0/macos/lib/QtCore.framework/Headers/**"
-        "~/Qt/6.5.0/macos/lib/QtQml.framework/Headers/**"
-        "~/Qt/6.5.0/macos/lib/QtGui.framework/Headers/**"
-        "~/Repositories/FileBrowser/inc/**"
+        "~/Qt/6.5.0/macos/lib/QtCore.framework/Headers"
+        "~/Qt/6.5.0/macos/lib/QtQml.framework/Headers"
+        "~/Qt/6.5.0/macos/lib/QtGui.framework/Headers"
+        "~/Repository/FileBrowser/inc"
     )
 
 target_sources(fileBrowser
