--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,17 @@ ELSE()
 ENDIF()
 
 project(FileBrowser VERSION 1.0 LANGUAGES CXX)
+
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Gui)
 
+qt_standard_project_setup()
 qt_add_executable(fileBrowser ./src/program.cpp)
 target_include_directories(fileBrowser 
     PRIVATE
@@ -24,15 +29,19 @@ target_include_directories(fileBrowser
 
 target_sources(fileBrowser
     PRIVATE
-        ./src/program.cpp
-        ./src/SystemInfo.cpp
+        src/program.cpp
+        src/SystemInfo.cpp
     PUBLIC
-        ./inc/SystemInfo.hpp
+        inc/SystemInfo.hpp
     )
 
-qt_standard_project_setup()
+set_source_files_properties(qml/main.qml PROPERTIES QT_RESOURCE_ALIAS main.qml)
 qt_add_qml_module(fileBrowser 
-    URI qml
-    QML_FILES ./qml/main.qml)
+    URI 
+        main
+    RESOURCE_PREFIX 
+        /qt/qml/ui
+    QML_FILES  
+        qml/main.qml)
 
-target_link_libraries(fileBrowser PRIVATE Qt6::Gui Qt6::Quick)
+target_link_libraries(fileBrowser PRIVATE Qt6::Gui Qt6::Qml)
