Extract the dynamic view to external file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ qt_add_qml_module(fileBrowser
         qml/components/FormField.qml
         qml/models/InfoList.qml
         qml/models/InfoListDelegate.qml
+        qml/models/DynamicView.qml
     RESOURCES
         images/icon.png
     DEPENDENCIES
