Fix the linux build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "cmake.cmakePath": "/opt/homebrew/bin/cmake",
+    "cmake.cmakePath": "/usr/local/bin/cmake",
     //"cmake.cmakePath" : "/usr/bin/cmake",
     "files.associations": {
         "type_traits": "cpp",
